updated preview latest from master
updated preview latest from master

--- a/platforms/android-java/install/index.html
+++ b/platforms/android-java/install/index.html
@@ -284,8 +284,8 @@ var utag_data = {
 <ul>
 <li><a href="https://developer.android.com/studio">Android Studio</a></li>
 <li>Android (KitKat/4.4+ / API Level 19+)</li>
-<li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a> (if using Customer Data Hub)</li>
+<li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Tealium iQ Mobile Profile</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-Customer-Data-Hub/ta-p/17571">Tealium Customer Data Hub account</a></li>
 </ul>
 
 <h2 id="sample-apps">Sample Apps</h2>
@@ -1528,7 +1528,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 23, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
