--- a/platforms/android-java/module-list/install-referrer/index.html
+++ b/platforms/android-java/module-list/install-referrer/index.html
@@ -280,7 +280,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium for Android SDK version 5.x+ (for version 4.x, see <a href="#solution-for-tealium-sdk-4-x">solution below </a>)</li>
+<li><a href="/platforms/android-java/">Tealium for Android</a> (5.0.0+) (<a href="#solution-for-tealium-sdk-4-x">solution for 4.x</a>)</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -1534,7 +1534,7 @@ To delete the stored install referrer string, call the standard methods provided
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 25, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
