--- a/platforms/android-java/module-list/optimizely-x-tracking/index.html
+++ b/platforms/android-java/module-list/optimizely-x-tracking/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>The <a href="https://developers.optimizely.com/classic/android/getting-started/index.html">Optimizely X Android SDK</a> added to your app</li>
+<li><a href="https://developers.optimizely.com/classic/android/getting-started/index.html">Optimizely X Android SDK</a> added to your app</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -1565,7 +1565,7 @@ TealiumOptimizelyEventListener.<span style="color:#008080">OPTIMIZELY_ATTRIBUTE_
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 12, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
