--- a/platforms/flutter/install/index.html
+++ b/platforms/flutter/install/index.html
@@ -273,17 +273,15 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
-<p>Tealium for Flutter allows you to use the Tealium native mobile libraries (Android/iOS) in your Flutter application.</p>
+<p>Tealium for Flutter allows you to use the Tealium native mobile libraries for <a href="/platforms/android-java">Android</a> or <a href="/platforms/ios-swift">iOS</a> in your Flutter application.</p>
 
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>The <a href="https://flutter.dev/">Flutter</a> application development framework</li>
-<li>An editor such as <a href="https://developer.android.com/studio">Android Studio</a> or <a href="https://code.visualstudio.com/">VS Code</a></li>
-<li>The Flutter <a href="https://github.com/flutter/plugins">plugin</a> installed for development</li>
+<li><a href="https://flutter.dev/">Flutter</a> application development framework</li>
+<li>IDE such as <a href="https://developer.android.com/studio">Android Studio</a> or <a href="https://code.visualstudio.com/">VS Code</a></li>
+<li>Flutter <a href="https://github.com/flutter/plugins">plugin</a> installed on the IDE</li>
 </ul>
-
-<p>Learn more about the Tealium native mobile libraries in our <a href="/platforms/android-java">Tealium for Android</a> and <a href="/platforms/ios-swift">Tealium for iOS</a> guides.</p>
 
 <h2 id="sample-apps">Sample Apps</h2>
 
@@ -1435,7 +1433,7 @@ tealium: <span style="color:#b84">&#39;1.0.0&#39;</span></code></pre></div></li>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 31, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
