--- a/platforms/flutter/release-notes/index.html
+++ b/platforms/flutter/release-notes/index.html
@@ -234,7 +234,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-0-july-2019">Version 1.0.0 (July 2019)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-2-0-february-2020">Version 1.2.0 (February 2020)</a></li>
+              <li><a href="#version-1-0-0-july-2019">Version 1.0.0 (July 2019)</a></li>
               </nav>
   </aside></div>
 
@@ -265,6 +266,20 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the Tealium plugin for Flutter.</p>
+
+<h2 id="version-1-2-0-february-2020">Version 1.2.0 (February 2020)</h2>
+
+<p><strong>High Impact Changes</strong></p>
+
+<ul>
+<li>Added support for Tealium <a href="/platforms/remote-commands/how-it-works/">remote commands</a> through Flutter. This allows for a remote command to be added in a JavaScript file and the payload will be passed back via a callback function. Remote commands may also be removed. Refer to the <a href="/platforms/flutter/api/">Flutter API</a> to learn more about the remote command methods.</li>
+</ul>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Underlying Tealium libraries updated to versions 5.7.0 (Android) and 5.6.6 (iOS)</li>
+</ul>
 
 <h2 id="version-1-0-0-july-2019">Version 1.0.0 (July 2019)</h2>
 
@@ -1387,7 +1402,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 6, 2019 
+    <span>This page was last updated:  February 19, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
