--- a/platforms/getting-started/location/index.html
+++ b/platforms/getting-started/location/index.html
@@ -337,6 +337,7 @@ var utag_data = {
 <tr>
 <th>Transition</th>
 <th>Tealium Event</th>
+<th>Description</th>
 </tr>
 </thead>
 
@@ -344,16 +345,19 @@ var utag_data = {
 <tr>
 <td>Geofence entered</td>
 <td><code>tealium_event=&quot;geofence_entered&quot;</code></td>
+<td>The user entered a geofence</td>
 </tr>
 
 <tr>
 <td>Geofence exited</td>
 <td><code>tealium_event=&quot;geofence_exited&quot;</code></td>
+<td>The user exited a geofence</td>
 </tr>
 
 <tr>
 <td>Dwelled</td>
 <td><code>tealium_event=&quot;geofence_dwell&quot;</code> (Android only)</td>
+<td>The user stops for a defined duration within a geofence</td>
 </tr>
 </tbody>
 </table>
@@ -1623,7 +1627,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 12, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
