--- a/platforms/getting-started/troubleshooting/index.html
+++ b/platforms/getting-started/troubleshooting/index.html
@@ -392,7 +392,7 @@ var utag_data = {
 
 <ul>
 <li>Charles Proxy</li>
-<li>Tealium EventStream</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-Customer-Data-Hub/ta-p/17571">Tealium Customer Data Hub account</a></li>
 </ul>
 
 <h4 id="using-a-rewrite-in-charles-proxy">Using a Rewrite in Charles Proxy</h4>
@@ -1795,7 +1795,7 @@ data.put(&quot;cp.trace_id&quot;, &quot;TRACE_ID&quot;);
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 7, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
