--- a/platforms/ios-objective-c/install/index.html
+++ b/platforms/ios-objective-c/install/index.html
@@ -280,10 +280,10 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Xcode 7 and higher</li>
-<li>Compatible with iOS 8.1 and higher</li>
-<li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Mobile Profile</a> (if using Tealium iQ)</li>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub account</a> (if using Customer Data Hub)</li>
+<li>Xcode 7+</li>
+<li>iOS 8.1+</li>
+<li><a href="https://community.tealiumiq.com/t5/Getting-Started/Creating-a-Mobile-Profile/ta-p/16328">Tealium iQ Mobile Profile</a></li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-Customer-Data-Hub/ta-p/17571">Tealium Customer Data Hub account</a></li>
 </ul>
 
 <h2 id="samples-apps">Samples Apps</h2>
@@ -305,7 +305,7 @@ var utag_data = {
 
 <h3 id="cocoapods">CocoaPods</h3>
 
-<p>To install Tealium for iOS (Objective-C) library for your app with CocoaPods (recommended):</p>
+<p>To install Tealium for iOS (Objective-C) for your app with CocoaPods (recommended):</p>
 
 <ol>
 <li><p>Add the following dependency to your Podfile:</p>
@@ -319,7 +319,7 @@ var utag_data = {
 
 <h3 id="carthage">Carthage</h3>
 
-<p>To install Tealium for iOS (Objective-C) library for your app with Carthage:</p>
+<p>To install Tealium for iOS (Objective-C) for your app with Carthage:</p>
 
 <ol>
 <li><p>Add the following to your Cartfile:</p>
@@ -335,7 +335,7 @@ var utag_data = {
 
 <h3 id="manual">Manual</h3>
 
-<p>To install Tealium for iOS (Objective-C) library for your app manually:</p>
+<p>To install Tealium for iOS (Objective-C) for your app manually:</p>
 
 <ol>
 <li><p>Add <code>TealiumIOS.framework</code> to your project.</p></li>
@@ -1578,7 +1578,7 @@ tealConfig.logLevel = .prod</code></pre></div>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 7, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
