--- a/platforms/ios-objective-c/module-list/optimizely-x-tracking/index.html
+++ b/platforms/ios-objective-c/module-list/optimizely-x-tracking/index.html
@@ -234,7 +234,7 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#prerequisites">Prerequisites</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#requirements">Requirements</a></li>
               <li><a href="#install">Install</a></li>
               <li><a href="#initialize">Initialize</a></li>
               <li><a href="#track">Track</a></li>
@@ -275,10 +275,10 @@ var utag_data = {
 <div class="prose" id="prose">
   
 
-<h2 id="prerequisites">Prerequisites</h2>
+<h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>The <a href="https://developers.optimizely.com/classic/ios/getting-started/index.html">Optimizely X iOS SDK</a> added to your app</li>
+<li><a href="https://developers.optimizely.com/classic/ios/getting-started/index.html">Optimizely X iOS SDK</a> added to your app</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -1500,7 +1500,7 @@ optimizelyTracker.TEOptimizelyEventValueKeyName <span style="font-weight:bold">=
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 22, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
