--- a/platforms/ios-objective-c/watchos/index.html
+++ b/platforms/ios-objective-c/watchos/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <li>Xcode 7+</li>
 <li>iOS 8.1+</li>
 <li>watchOS 2.0+</li>
-<li><a href="/platforms/ios/">Tealium for iOS</a> installed in the host app</li>
+<li><a href="/platforms/ios-swift/">Tealium for iOS</a> installed in the host app</li>
 <li>400KB available space in <code>.ipa</code>file size (this accounts for the <code>tealium-ios</code> library needed in the host app)</li>
 <li><a href="https://developer.apple.com/library/content/documentation/IDEs/Conceptual/AppDistributionGuide/AppThinning/AppThinning.html">Bitcode compliant</a> framework</li>
 </ul>
@@ -1508,7 +1508,7 @@ config.logLevel <span style="font-weight:bold">=</span> TEALLogLevelDev;
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  October 31, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
