--- a/platforms/ios-swift/module-list/location/index.html
+++ b/platforms/ios-swift/module-list/location/index.html
@@ -300,7 +300,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li><a href="/platforms/ios-swift/">Tealium for Swift</a> library (version 1.9.0+).</li>
+<li><a href="/platforms/ios-swift/">Tealium for Swift</a> (1.9.0+)</li>
 </ul>
 
 <h2 id="sample-app">Sample App</h2>
@@ -1615,7 +1615,7 @@ If a user is within a geofence at the time of creation, the <code>&quot;enter&qu
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 12, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
