--- a/platforms/ios-swift/module-list/remote-commands/index.html
+++ b/platforms/ios-swift/module-list/remote-commands/index.html
@@ -235,6 +235,7 @@ var utag_data = {
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
       <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#requirements">Requirements</a></li>
+              <li><a href="#supported-platforms">Supported Platforms</a></li>
               <li><a href="#install">Install</a></li>
               <ul class="toc-h3"><li><a href="#cocoapods">CocoaPods</a></li>
               <li><a href="#carthage">Carthage</a></li>
@@ -288,13 +289,11 @@ var utag_data = {
 
 <h2 id="requirements">Requirements</h2>
 
-<p>This module has the following requirements:</p>
-
 <ul>
-<li>Tag Management module. Not a compile-time dependency, but Remote Commands are triggered from the Tag Management module.</li>
+<li>Tealium iQ Tag Management module. Not a compile-time dependency, but Remote Commands are triggered from the module.</li>
 </ul>
 
-<p>The following platforms are supported:</p>
+<h2 id="supported-platforms">Supported Platforms</h2>
 
 <ul>
 <li>iOS</li>
@@ -1621,7 +1620,7 @@ tealium?.remoteCommands()?.enableRemoteHTTPCommand()</code></pre></div>
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 22, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
