--- a/platforms/react-native/install/index.html
+++ b/platforms/react-native/install/index.html
@@ -235,7 +235,7 @@ var utag_data = {
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
       <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#how-it-works">How It Works</a></li>
-              <li><a href="#prerequisites">Prerequisites</a></li>
+              <li><a href="#requirements">Requirements</a></li>
               <li><a href="#sample-app">Sample App</a></li>
               <li><a href="#install-npm-yarn">Install (NPM/YARN)</a></li>
               <ul class="toc-h3"><li><a href="#android">Android</a></li>
@@ -298,13 +298,13 @@ var utag_data = {
 <li>Manual via <a href="https://github.com/Tealium/tealium-react-native">GitHub</a></li>
 </ul>
 
-<h2 id="prerequisites">Prerequisites</h2>
+<h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Access to your native build environments.</li>
-<li><a href="https://github.com/Tealium/tealium-react-native">React Native and Tools</a> installed</li>
+<li>Access to your native build environments</li>
+<li><a href="https://github.com/Tealium/tealium-react-native">React Native</a> and tools installed</li>
 <li><a href="https://developer.android.com/studio/">Android Studio</a> or <a href="https://developer.apple.com/xcode/">Xcode</a></li>
-<li><a href="/platforms/android/">Tealium for Android</a> or <a href="/platforms/ios-swift/">Tealium for iOS</a></li>
+<li><a href="/platforms/android-java/">Tealium for Android</a> or <a href="/platforms/ios-swift/">Tealium for iOS</a></li>
 </ul>
 
 <h2 id="sample-app">Sample App</h2>
@@ -326,7 +326,7 @@ var utag_data = {
 
 <h3 id="android">Android</h3>
 
-<p>Add a reference to Tealium&rsquo;s Maven repository in your project root <code>build.gradle</code> as described in the <a href="https://docs.tealium.com/platforms/android/install/#maven-install">Android Maven Install</a> documentation. The project dependencies are automatically handled by the Autolinking process.</p>
+<p>Add a reference to Tealium&rsquo;s Maven repository in your Android project&rsquo;s root <code>build.gradle</code> file as described in the <a href="https://docs.tealium.com/platforms/android/install/#maven-install">Android Maven Install</a> documentation. The project dependencies are automatically handled by the Autolinking process.</p>
 
 <h3 id="ios">iOS</h3>
 
@@ -350,7 +350,7 @@ var utag_data = {
 
 <h3 id="android-1">Android</h3>
 
-<p>For iOS apps, follow these manual installation steps:</p>
+<p>For Android apps, follow these manual installation steps:</p>
 
 <ol>
 <li><p>To integrate Tealium into your Android application, add this to your Tealium Maven repository:</p></li>
@@ -1565,7 +1565,7 @@ All initialization options are available with the method <a href="/platforms/rea
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  November 1, 2019 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
