--- a/platforms/unity/install/index.html
+++ b/platforms/unity/install/index.html
@@ -280,7 +280,7 @@ var utag_data = {
 
 <ul>
 <li><a href="https://unity.com/">Unity</a> 4.5+</li>
-<li>iOS/Android target</li>
+<li>iOS or Android target</li>
 </ul>
 
 <h2 id="sample-app">Sample app</h2>
@@ -1462,7 +1462,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 7, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
