--- a/platforms/android-java/module-list/crash-reporter/index.html
+++ b/platforms/android-java/module-list/crash-reporter/index.html
@@ -281,7 +281,7 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li>Tealium Android Framework 5.x</li>
+<li><a href="/platforms/android-java/">Tealium for Android</a> (5.0.0+)</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -1534,7 +1534,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 12, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
