--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -234,7 +234,7 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-9-0-2020">Version 1.9.0 (2020)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-9-0-1-9-1-2020">Version 1.9.0 - 1.9.1 (2020)</a></li>
               <li><a href="#version-1-70-1-8-2-2019">Version 1.70 - 1.8.2 (2019)</a></li>
               <li><a href="#version-1-50-1-6-7-2018">Version 1.50 - 1.6.7 (2018)</a></li>
               <li><a href="#version-1-1-3-1-4-0-2017">Version 1.1.3-1.4.0 (2017)</a></li>
@@ -276,11 +276,19 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the Swift library.</p>
 
-<h2 id="version-1-9-0-2020">Version 1.9.0 (2020)</h2>
+<h2 id="version-1-9-0-1-9-1-2020">Version 1.9.0 - 1.9.1 (2020)</h2>
+
+<h4 id="version-1-9-1">Version 1.9.1</h4>
+
+<p><strong>Released:</strong> February 2020</p>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<p>This version did not change any functionality. The version number was bumped to 1.9.1 to fix an issue with the Carthage dependency manager. No other changes were made.</p>
 
 <h4 id="version-1-9-0">Version 1.9.0</h4>
 
-<p><strong>Released:</strong> January 2020</p>
+<p><strong>Released:</strong> February 2020</p>
 
 <p><strong>New Features</strong></p>
 
@@ -2027,7 +2035,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 14, 2020 
+    <span>This page was last updated:  February 17, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
