--- a/platforms/java/install/index.html
+++ b/platforms/java/install/index.html
@@ -277,9 +277,9 @@ var utag_data = {
 <h2 id="requirements">Requirements</h2>
 
 <ul>
-<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/tkb-p/udh">Tealium Customer Data Hub</a> account.</li>
-<li>Java IDE (For example, Eclipse or NetBeans).</li>
-<li>Java JDK 7+.</li>
+<li><a href="https://community.tealiumiq.com/t5/Customer-Data-Hub/Introduction-to-Customer-Data-Hub/ta-p/17571">Tealium Customer Data Hub account</a></li>
+<li>Java IDE such as Eclipse or NetBeans</li>
+<li>Java JDK 7+</li>
 </ul>
 
 <h2 id="install">Install</h2>
@@ -1436,7 +1436,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  January 23, 2020 
+    <span>This page was last updated:  February 20, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
