--- a/platforms/react-native/release-notes/index.html
+++ b/platforms/react-native/release-notes/index.html
@@ -234,7 +234,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-7">Version 1.0.7</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-8">Version 1.0.8</a></li>
+              <li><a href="#version-1-0-7">Version 1.0.7</a></li>
               <li><a href="#version-1-0-5-1-0-6">Version 1.0.5 - 1.0.6</a></li>
               <li><a href="#version-1-0-3-1-0-4">Version 1.0.3 - 1.0.4</a></li>
               <li><a href="#version-1-0-1-1-0-2">Version 1.0.1 - 1.0.2</a></li>
@@ -276,18 +277,41 @@ var utag_data = {
 
 <p>Below is a complete list of changes for each release of the React Native library.</p>
 
+<h2 id="version-1-0-8">Version 1.0.8</h2>
+
+<p><strong>Released:</strong> February 2020</p>
+
+<p><strong>High Impact Changes</strong></p>
+
+<ul>
+<li>Added support for Tealium <a href="/platforms/remote-commands/how-it-works/">remote commands</a> through React Native. This allows for a remote command to be added in a JavaScript file and the payload will be passed back via a callback function. Remote commands may also be removed via React Native. Refer to the <a href="/platforms/react-native/api/">React Native API</a> to learn more about the remote command methods.</li>
+</ul>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Underlying Tealium libraries updated to versions 5.7.0 (Android) and 5.6.6 (iOS)</li>
+<li>Added TypeScript typings</li>
+</ul>
+
 <h2 id="version-1-0-7">Version 1.0.7</h2>
 
 <p><strong>Released:</strong> November 2019</p>
 
-<p><strong>High Impact Changes</strong>
-* Support for ReactNative Autolinking in 0.60+
-* Better support for nested event data specifically for Android platform
-* Underlying Tealium libraries updated to versions 5.5.5 (Android) and 5.6.3 (iOS)
-* Bug Fixes
-    * Corrected method signature for <code>Tealium.getPersistentData(key, callback)</code>
-    * Build errors in iOS relating to <code>Vdata</code>/<code>Event</code> enums have been fixed
-    * Fixed crashes on some iPad versions (only when using <code>TealiumIOS</code> pod v5.6.0/5.6.1)</p>
+<p><strong>High Impact Changes</strong></p>
+
+<ul>
+<li>Support for ReactNative Autolinking in 0.60+</li>
+<li>Better support for nested event data specifically for Android platform</li>
+<li>Underlying Tealium libraries updated to versions 5.5.5 (Android) and 5.6.3 (iOS)</li>
+<li>Bug Fixes
+
+<ul>
+<li>Corrected method signature for <code>Tealium.getPersistentData(key, callback)</code></li>
+<li>Build errors in iOS relating to <code>Vdata</code>/<code>Event</code> enums have been fixed</li>
+<li>Fixed crashes on some iPad versions (only when using <code>TealiumIOS</code> pod v5.6.0/5.6.1)</li>
+</ul></li>
+</ul>
 
 <h2 id="version-1-0-5-1-0-6">Version 1.0.5 - 1.0.6</h2>
 
@@ -1464,7 +1488,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  December 4, 2019 
+    <span>This page was last updated:  February 19, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
