updated preview with latest from master
updated preview with latest from master

--- a/platforms/react-native/release-notes/index.html
+++ b/platforms/react-native/release-notes/index.html
@@ -234,7 +234,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-8">Version 1.0.8</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#version-1-0-9">Version 1.0.9</a></li>
+              <li><a href="#version-1-0-8">Version 1.0.8</a></li>
               <li><a href="#version-1-0-7">Version 1.0.7</a></li>
               <li><a href="#version-1-0-5-1-0-6">Version 1.0.5 - 1.0.6</a></li>
               <li><a href="#version-1-0-3-1-0-4">Version 1.0.3 - 1.0.4</a></li>
@@ -276,6 +277,16 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the React Native library.</p>
+
+<h2 id="version-1-0-9">Version 1.0.9</h2>
+
+<p><strong>Released:</strong> February 2020</p>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Fixed bug in Typescript typings</li>
+</ul>
 
 <h2 id="version-1-0-8">Version 1.0.8</h2>
 
@@ -1488,7 +1499,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  February 19, 2020 
+    <span>This page was last updated:  February 24, 2020 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
